[package]
name = "ethereum-tx-sign"
version = "5.0.1-rc.1"
description = "Allows you to sign Ethereum transactions offline."
repository = "https://github.com/synlestidae/ethereum-tx-sign"
license = "MIT"
keywords = ["ethereum", "transaction", "sign", "offline"]
authors = ["Mate Antunovic <mateATschnooty.com"]
readme = "README.md"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
secp256k1 = {version = "0.23.4", features = ["recovery"] }
rlp = "0.5.1"
num-traits = "0.2"
bytes = "^1"
hex = "0.4.3"

[dev-dependencies]
ethereum-types= "0.13"
serde_json = "1.0"
